# OratioText

./: .gitignore  BUILD.md  Info.plist  OratioText-windows.spec  OratioText.spec  README.md  TODO.md  main.py  requirements.txt
.github/workflows/: build.yml  release.yml
components/: file_selector.py  main_window.py  model_selector.py
scripts/: build_windows.bat
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model_manager.rs  transcriber.rs
utils/: system_info.py  whisper_handler.py
